Clarify that the hair color has to be chosen

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <option value="GB">United Kingdom</option>
       </select>
       <select id="hair_color">
+        <option value="">Select your hair color</option>
         <option value="black">Black</option>
         <option value="brown">Brown</option>
         <option value="blonde">Blonde</option>
